--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -212,7 +212,7 @@
                                     <field name="goods_ready"/>
                                     <field name="state" invisible="1"/>
                                     <button name="action_check_goods_ready" string="Check" type="object" icon="gtk-ok"
-                                            attrs="{'invisible': [('state', '=', 'done')]}"/>
+                                            attrs="{'invisible': [('state', 'in', ['assigned', 'done'])]}"/>
                                 </tree>
                                 <form string="Move">
                                     <field name="product_id" readonly="1"/>
@@ -275,6 +275,7 @@
             <field name="type">search</field>
             <field name="arch" type="xml">
                 <search string="Line Order Board">
+                    <filter icon="terp-dialog-close" name="to_delivery" string="To Delievery" domain="[('state','!=','done')]"/>
                     <field name="sale_id" filter_domain="['|',('sale_id','ilike',self),('origin','ilike',self)]"/>
                     <field name="partner_id"/>
                     <field name="product_id"/>
@@ -327,7 +328,7 @@
                     <field name="goods_ready"/>
                     <field name="state"/>
                     <button name="action_check_goods_ready" string="Check" type="object" icon="gtk-ok"
-                            attrs="{'invisible': [('state', '=', 'done')]}"/>
+                            attrs="{'invisible': [('state', 'in', ['assigned', 'done'])]}"/>
                     <field name="line_price_subtotal" sum="line_price_subtotal"/>
                 </tree>
             </field>
@@ -335,7 +336,7 @@
 
         <record id="action_view_stock_picking" model="ir.actions.act_window">
             <field name="domain">[('sale_id', '!=', False), ('state', '!=', 'cancel'), ('type', 'in', ('internal', 'out')), ('ddt_number', '=', False)]</field>
-            <field name="context">{'nodelete': '1', 'nocreate': '1', 'noduplicate': '1', 'order': 'minimum_planned_date desc'}</field>
+            <field name="context">{'nodelete': '1', 'nocreate': '1', 'noduplicate': '1', 'order': 'minimum_planned_date desc', 'search_default_to_delivery': 1}</field>
             <field name="name">Order Board</field>
             <field name="res_model">stock.picking</field>
             <field name="search_view_id" ref="view_stock_picking_search"/>
@@ -365,7 +366,7 @@
         </record>
 
         <record id="action_view_stock_move" model="ir.actions.act_window">
-            <field name="domain">[('picking_id.sale_id', '!=', False), ('picking_id.state', '!=', 'cancel'), ('picking_id.type', 'in', ('internal', 'out')), ('picking_id.ddt_number', '=', False), ('state', '!=', 'done')]</field>
+            <field name="domain">[('picking_id.sale_id', '!=', False), ('picking_id.state', '!=', 'cancel'), ('picking_id.type', 'in', ('internal', 'out')), ('picking_id.ddt_number', '=', False)]</field>
             <field name="context">{'nodelete': '1', 'nocreate': '1', 'noduplicate': '1', 'order': 'minimum_planned_date desc'}</field>
             <field name="name">Line Order Board</field>
             <field name="res_model">stock.move</field>
