--- a/account_payment_term_month/views/payment_view.xml
+++ b/account_payment_term_month/views/payment_view.xml
@@ -33,7 +33,14 @@
             <field name="inherit_id" ref="account.view_payment_term_form"/>
             <field name="arch" type="xml">
                 <field name="line_ids" position="before">
-                    <group colspan="2" col="4">
+                    <group string="Auto Creation" colspan="4" col="4">
+                        <field name="month_list" />
+                        <field name="month_day" />
+                        <field name="tax_exclude" />
+                        <field name="tax_day" attrs="{'invisible':[('tax_exclude','=',False)]}"/>
+                    </group>
+                    <group colspan="4" col="4">
+
                         <field name="month_to_be_delayed1"/>
                         <field name="month_to_be_delayed2"/>
                         <field name="days_to_be_delayed1"/>
