--- a/l10n_it_account/wizard/check_account_invoice_view.xml
+++ b/l10n_it_account/wizard/check_account_invoice_view.xml
@@ -18,6 +18,8 @@
                         <field name="vat" attrs="{'invisible':[('required_vat', '=', False)], 'required':[('required_vat', '=', True)]}"/>
                         <field name="check_supplier_invoice_number" invisible="1"/>
                         <field name="supplier_invoice_number" attrs="{'invisible':[('check_supplier_invoice_number', '=', False)], 'required':[('check_supplier_invoice_number', '=', True)]}"/>
+                        <field name="show_message" invisible="1"/>
+                        <field name="warning" attrs="{'invisible':[('show_message', '=', False)]}" nolabel="1"/>
                     </group>
                     <group colspan="3" col="2">
                         <button icon="gtk-cancel" special="cancel" string="Cancel"/>
