--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -259,8 +259,8 @@
                     <field name="minimum_planned_date"/>
                     <field name="week_nbr" />
                     <field name="order_type" />
-                    <field name="order_sent" />
                     <field name="order_ready" />
+                    <field name="picked_rate" widget="progressbar"/>
                     <field name="amount_partial" sum="Total" groups="base.group_sale_salesman"/>
                     <field name="amount_total" sum="Total" groups="base.group_sale_salesman"/>
                     <field name="payment_term_id" invisible="context.get('show_delivery', False)"/>
