--- a/crm_lead_correct/views/crm_lead_view.xml
+++ b/crm_lead_correct/views/crm_lead_view.xml
@@ -207,6 +207,7 @@
                 <field name="country_id" position="after">
                     <field name="categ_id" widget="selection" domain="[('object_id.model', '=', 'crm.lead')]"/>
                     <field name="channel_id" widget="selection"/>
+                    <filter domain="[]" icon="terp-stock_zoom" name="show_extended" string="Show Note" context="{'show_note': True}"/>
                 </field>
 
             </field>
@@ -223,6 +224,7 @@
                     <field name="date_deadline" invisible="1"/>
                     <field name="create_date"/>
                     <field name="name" string="Subject"/>
+                    <field name="partner_name"/>
                     <field name="contact_name"/>
                     <field name="country_id" invisible="context.get('invisible_country', True)"/>
                     <field name="city"/>
@@ -246,6 +248,7 @@
                     <field name="section_id" invisible="context.get('invisible_section', True)"/>
                     <field name="user_id"/>
                     <field name="state"/>
+                    <field name="description" invisible="not context.get('show_note', False)"/>
                     <button name="case_open" string="Open"
                             states="draft,pending" type="object"
                             icon="gtk-go-forward"/>
