--- a/sale_order_modify_confirmed_service/views/sale_view.xml
+++ b/sale_order_modify_confirmed_service/views/sale_view.xml
@@ -11,7 +11,7 @@
                     <button type='action' name='%(action_modify_saleorder)d' icon="gtk-edit" string="Edit Services"
                             colspan="1" groups="base.group_sale_manager"
                             attrs="{'invisible': ['|',('has_services','=',False),
-                                                      ('state','not in',['wait_supervisor_validation','progress','done'])]}"/>
+                                                      ('state','not in',['wait_customer_validation', 'wait_supervisor_validation','progress','done'])]}"/>
                     <newline />
                 </group>
             </field>
