--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -250,7 +250,7 @@
                 <tree string="Order Board" colors="green:order_ready">
                     <field name="sale_id"/>
                     <field name="client_order_ref"/>
-                    <field name="customer_id"/>
+                    <field name="customer_id" invisible="1"/>
                     <field name="sale_user_id" invisible="not context.get('show_delivery', False)"/>
                     <field name="province" invisible="not context.get('show_delivery', False)"/>
                     <field name="region" invisible="not context.get('show_delivery', False)"/>
@@ -277,7 +277,7 @@
             <field name="arch" type="xml">
                 <search string="Line Order Board">
                     <filter icon="terp-dialog-close" name="to_delivery" string="To Delievery" domain="[('state','!=','done')]"/>
-                    <field name="sale_id" filter_domain="['|',('sale_id','ilike',self),('origin','ilike',self)]"/>
+                    <field name="sale_id" filter_domain="['|',('sale_id','ilike',self),('origin','ilike',self)]" domain="[('state','in', ['progress', 'manual', 'done'])]"/>
                     <field name="partner_id"/>
                     <field name="product_id"/>
                     <separator orientation="vertical"/>
@@ -306,10 +306,11 @@
             <field name="arch" type="xml">
                 <form string="Move">
                     <field name="product_id" readonly="1"/>
-                    <field name="product_qty" readonly="1"/>
                     <field name="picking_id" readonly="1"/>
+                    <field name="product_qty" readonly="1"/>
                     <field name="sale_id" readonly="1"/>
                     <field name="state"/>
+                    <field name="note" colspan="4" nolabel="1"/>
                 </form>
             </field>
         </record>
