multy optimizing for fast open

--- a/sale_order_requirement/views/mrp_production_view.xml
+++ b/sale_order_requirement/views/mrp_production_view.xml
@@ -68,6 +68,7 @@
                 </xpath>
 
                 <field name="picking_id" position="after">
+                    <field name="analytic_account_id" />
                     <field name="order_requirement_line_id"/>
                     <!--<button colspan="1" name="action_view_order_requirement" context="{'ordreq_line_id': order_requirement_line_id}"-->
                             <!--icon="terp-gtk-select-all" type="object" string="Order Requirement Line"/>-->
