--- a/sale_order_confirm/wizard/confirmation_view.xml
+++ b/sale_order_confirm/wizard/confirmation_view.xml
@@ -44,6 +44,7 @@
                     <separator colspan="4" string="Products"/>
                     <field name="confirm_line" on_change="onchange_line(confirm_line)" colspan="4" nolabel="1" mode="tree" width="550" height="200">
                         <tree editable="bottom" string="Product Order">
+                            <field name="sale_line_id" invisible="1" />
                             <field name="product_id" on_change="onchange_product(product_id, quantity, parent.sale_order_id, context)"/>
                             <field name="name" />
                             <!--<button name="action_add" string="Add" type="object" icon="gtk-add" />-->
