--- a/l10n_it_account/views/fiscal_position_view.xml
+++ b/l10n_it_account/views/fiscal_position_view.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" ?>
 <openerp>
     <data>
+
+         <record id="view_account_position_tree" model="ir.ui.view">
+            <field name="name">account.fiscal.position.tree.view</field>
+            <field name="model">account.fiscal.position</field>
+            <field name="type">tree</field>
+            <field name="inherit_id" ref="account.view_account_position_tree"/>
+            <field name="arch" type="xml">
+                <field name="name" position="after">
+                    <field name="customer"/>
+                    <field name="supplier"/>
+                </field>
+            </field>
+        </record>
+
         <record id="view_account_position_form" model="ir.ui.view">
             <field name="name">account.fiscal.position.vat.default.view</field>
             <field name="model">account.fiscal.position</field>
@@ -117,6 +131,10 @@
             <field name="view_mode">tree,form</field>
             <field name="context">{'is_tax_exemption': True}</field>
             <field name="search_view_id" ref="view_account_position_exemption_search"/>
+        </record>
+
+        <record id="account.action_account_fiscal_position_form" model="ir.actions.act_window">
+            <field name="domain">[('is_tax_exemption', '=', False)]</field>
         </record>
 
 
