--- a/base_address_contacts/views/res_partner_address_view.xml
+++ b/base_address_contacts/views/res_partner_address_view.xml
@@ -23,7 +23,7 @@
         <field name="type">tree</field>
         <field name="arch" type="xml">
             <tree string="Contact Function" editable="top">
-                <field name="ref" />
+                <field name="code" />
                 <field name="name" select="1"/>
             </tree>
         </field>
