also from order requirement is possible to see the connected document

--- a/sale_order_requirement/views/order_requirement.xml
+++ b/sale_order_requirement/views/order_requirement.xml
@@ -67,6 +67,9 @@
                     <field name="week_nbr" />
                     <field name="month" />
                     <field name="state" />
+                    <field name="production_orders_state"/>
+                    <field name="purchase_orders_approved"/>
+                    <field name="purchase_orders_state"/>
                 </tree>
             </field>
         </record>
