--- a/mrp_bom_standard_price/views/mrp_bom_view.xml
+++ b/mrp_bom_standard_price/views/mrp_bom_view.xml
@@ -42,7 +42,7 @@
             <field name="type">tree</field>
             <field name="arch" type="xml">
                 <field name="product_uom" position="replace">
-                    <!--<field name="bom_cost_price" groups="product_bom.group_cost_price" sum="SUM"/>-->
+                    <field name="bom_cost_price" groups="product_bom.group_cost_price" sum="SUM"/>
                 </field>
             </field>
         </record>
